# BULKI_Store

./: .gitignore  BulkiStore_launcher.ipynb  Bulki_Store.ipynb  COPYRIGHT  Cargo.toml  Copyright  LICENSE  README.md  aggregated_obj_demo.json  license.txt  pyproject.toml  quick_build.sh  release-hooks.sh  setup.py  testbkc.py  testbkcobj.py  testbkcobj3D.py  testbkcobj5D.py  testmpi_client.py  version_precommit.sh
.cargo/: config.toml
PyBulkiStore/: __init__.py
client/: Cargo.toml  pyproject.toml
client/python/: __init__.py
client/python/bkstore_client/: __init__.py
client/python/bkstore_client/bkc_object/: bkcobject.py  helpers.py
client/src/: client.rs  lib.rs
client/src/bk_ndarr/: mod.rs
client/src/cltctx/: mod.rs  resphandler.rs
client/src/datastore/: mod.rs
client/src/pyctx/: converter.rs  mod.rs
commons/: Cargo.toml  build.rs
commons-macros/: Cargo.toml
commons-macros/src/: lib.rs
commons/src/: lib.rs
commons/src/aop/: mod.rs
commons/src/dispatch/: mod.rs
commons/src/dispatcher/: mod.rs
commons/src/err/: mod.rs
commons/src/handler/: mod.rs
commons/src/job/: mod.rs
commons/src/object/: mod.rs  objid.rs  params.rs  types.rs
commons/src/region/: mod.rs
commons/src/rpc/: mod.rs  receiver.rs
commons/src/rpc/grpc/: mod.rs
commons/src/rpc/grpc/proto/: bulkistore.proto  bulkistore.rs  grpc_bulkistore.proto
commons/src/rpc/msg/: mod.rs
commons/src/rpc/tcp/: factory.rs  mod.rs
commons/src/utils/: mod.rs
pyclient/: Cargo.toml  build.rs
pyclient/python/bkstore_client/bkc_object/: __init__.py  helpers.py
pyclient/src/: lib.rs
pyclient/src/pyctx/: converter.rs  mod.rs  proc.rs
scripts/: clean.sh  gen_script.sh  submit.sh  template.sh
server/: Cargo.toml
server/src/: server.rs
server/src/bench/: mod.rs
server/src/datastore/: mod.rs
server/src/health/: mod.rs
server/src/srvctx/: mod.rs  reqhandler.rs  resphandler.rs  tpc_srvctx.rs
