[workspace]
members = ["commons-macros", "commons", "server", "client", "pyclient"]
resolver = "2"

[workspace.package]
version = "0.3.2"

[workspace.dependencies]
crossbeam = "0.8.4"
uuid = { version = "1.17.0", features = ["v7"] }
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
mpi = { version = "0.8.0" }
log = { version = "0.4.27" }
anyhow = { version = "1.0.98" }
rmp-serde = { version = "1.3.0" }
serde = { version = "1.0.219", features = ["derive"] }
rand = { version = "0.9.1" }
ndarray = { version = "0.16.1" }
msgpack-numpy = "0.1.3"
syn = { version = "2.0.101", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
inventory = "0.3.20"
lazy_static = "1.5.0"
tokio = { version = "1.45.0", features = ["full"] }
hostname = "0.4.1"
tonic = { version = "0.13.1", features = ["zstd", "transport"] }
prost = { version = "0.13.5" }
env_logger = "0.11.8"
async-trait = "0.1.88"
http = "1.3.1"
tonic-build = "0.13.1"
rayon = "1.10.0"
once_cell = "1.21.3"
fnv = "1.0.7"
num-traits = { version = "0.2.19" }
tokio-stream = { version = "0.1.17", features = ["net"] }
ordered-float = "5.0.0"
thread_local = "1.1.8"
futures = "0.3.31"
bincode = "2.0.1"
sysinfo = "0.35.1"
num_cpus = "1.16.0"
threadpool = "1.8.1"
bytes = "1.10.1"
moka = { version = "0.12.10", features = ["sync"] }
