[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bkstore_client"
requires-python = ">=3.7"
dependencies = ["numpy>=1.20.0", "mpi4py>=3.1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bkstore_client"
python-source = "python"
manifest-path = "client/Cargo.toml"
