[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bkstore_client"
requires-python = ">=3.7"
dependencies = ["numpy>=1.20.0", "mpi4py>=3.1.0"]
version = "0.1.0"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bkstore_client"
python-source = "client/python"
python-package = ["bkc_object"]
include = [{ path = "client/python/**/*.py", format = ["sdist", "wheel"] }]
manifest-path = "client/Cargo.toml"
