[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bkstore_client"
requires-python = ">=3.7"
dependencies = ["numpy>=1.20.0", "mpi4py>=3.1.0"]
version = ""

[tool.maturin]
features = ["pyo3/extension-module"]
# module-name = "bkstore_client"
python-source = "pyclient/python/bkstore_client"
python-packages = ["bkc_object"]
include = [
    "bkstore_client/__init__.py",
    "bkstore_client/bkc_object/__init__.py",
    "bkstore_client/bkc_object/helpers.py",
    "bkstore_client/bkc_object/bkcobject.py",
]
manifest-path = "pyclient/Cargo.toml"
