[package]
name = "client"
version.workspace = true
edition = "2021"

[package.metadata.release]
pre-release-hook = ["../release-hooks.sh", "pre-release"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bkstore_client"
crate-type = ["cdylib"]


[dependencies]

commons = { path = "../commons" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
rmp-serde = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
mpi = { workspace = true, optional = true }
msgpack-numpy = { workspace = true }
env_logger = { workspace = true }
pyo3 = { workspace = true, features = [
    "extension-module",
    "abi3-py37",
    "abi3",
    "generate-import-lib",
] }
thread_local = { workspace = true }
numpy = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
fnv = { workspace = true }
rayon = { workspace = true }


[features]
default = ["mpi"]
mpi = ["dep:mpi", "commons/mpi"]

# [target.aarch64-apple-darwin]
# rustflags = [
#     "-C",
#     "link-arg=-undefined",
#     "-C",
#     "link-arg=dynamic_lookup",
#     "-C",
#     "link-arg=-Wl,-rpath,/opt/homebrew/Caskroom/miniconda/base/lib",
# ]

# [build]
# rustflags = ["-C", "link-args=-Wl,-undefined,dynamic_lookup"]

[[bin]]
name = "bulkistore-client"
path = "src/client.rs"

# [package.metadata.maturin]
# sdist-include = [
#     "python/bkstore_client/*.py",
#     "python/bkstore_client/bkc_object/*.py",
# ]
