[package]
name = "client"
version.workspace = true
edition = "2021"


# [lib]
# name = "client"
# crate-type = ["rlib"]


[dependencies]

commons = { path = "../commons" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
rmp-serde = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
mpi = { workspace = true, optional = true }
msgpack-numpy = { workspace = true }
env_logger = { workspace = true }
thread_local = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
fnv = { workspace = true }
rayon = { workspace = true }


[features]
default = []
mpi = ["dep:mpi", "commons/mpi"]


[[bin]]
name = "bulkistore-client"
path = "src/client.rs"
