[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
commons-macros = { path = "../commons-macros" }
async-trait = "0.1.77"
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1", features = ["full"] }
hostname = "0.4.0"
mpi = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
ndarray = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = ["mpi"]
mpi = ["dep:mpi"]
