[package]
name = "commons"
version.workspace = true
edition = "2021"

[dependencies]
commons-macros = { path = "../commons-macros" }
async-trait = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
http = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
mpi = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
ndarray = { workspace = true, features = ["serde"] }
inventory = { workspace = true }
lazy_static = { workspace = true }
msgpack-numpy = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
env_logger = { workspace = true }
uuid = { workspace = true }
num-traits = { workspace = true }
fnv = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["mpi"]
mpi = ["dep:mpi"]
