[package]
name = "pyclient"
version.workspace = true
edition = "2021"

[package.metadata.release]
pre-release-hook = ["../release-hooks.sh", "pre-release"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bkstore_client"
crate-type = ["cdylib"]

[dependencies]
client = { path = "../client" }
commons = { path = "../commons" }
tokio = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
mpi = { workspace = true, optional = true }
msgpack-numpy = { workspace = true }
env_logger = { workspace = true }
thread_local = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
fnv = { workspace = true }
rayon = { workspace = true }
numpy = "0.23.0"
pyo3 = { version = "0.23.5", features = [
    "extension-module",
    "abi3-py37",
    "abi3",
    "generate-import-lib",
] }


[features]
# default = []
default = ["mpi"]
mpi = ["dep:mpi", "commons/mpi"]

[build-dependencies]
regex = "1.8.1"


# [package.metadata.maturin]
# sdist-include = [
#     "python/bkstore_client/*.py",
#     "python/bkstore_client/bkc_object/*.py",
# ]
