[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { path = "../commons", features = ["mpi"] }
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1", features = ["full"] }
hostname = "0.4.0"
rmp-serde = "1.1"
rayon = "1.10.0"
log = { version = "0.4.25" }
anyhow = "1.0"
mpi = { workspace = true, optional = true }
ndarray = { workspace = true }
msgpack-numpy = { workspace = true }

[features]
default = ["mpi"]
mpi = ["dep:mpi", "commons/mpi"]

[[bin]]
name = "bulkistore-server"
path = "src/server.rs"
