[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { path = "../commons", features = ["mpi"] }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }
rmp-serde = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
mpi = { workspace = true, optional = true }
ndarray = { workspace = true }
msgpack-numpy = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
fnv = { workspace = true }

[features]
default = ["mpi"]
mpi = ["dep:mpi", "commons/mpi"]

[[bin]]
name = "bulkistore-server"
path = "src/server.rs"
